fix(legacy): construct module instances through the constructor
Class.newInstance() is deprecated because it rethrows whatever the constructor
threw without wrapping it. Asking for the declared no-argument constructor is
the same instantiation for the public entry classes modules ship, and the
surrounding catch already treats any failure as a module that would not load.